# MBA_EMPREENDEDORISMO

./: LICENSE  Makefile  README.md  pyproject.toml
.obsidian/: workspace.json
cofre_remoto_mba_empreendedorismo/.obsidian/: workspace.json
desenvolvimento do trabalho/: Elasticidade das margens.md  Panfleto de venda.md  RESUMO PARA GAMMA.md
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
docs/docs/AULA 1/: 10 QUESTÕES PARA O FORMS.docx  ARQUETIPOS.docx  Analise das questões levantadas.docx  CENÁRIO VÁLIDO.docx  Cenários em inglês.docx  Desenvolvimento de um Gêmeo Digital - Pesquisa Conceitual.docx  IMAGENS.docx  Relatório de Diagnóstico 1ª Parcial.docx  TRABALHO PARA 08_12.docx  Trabalho 1 - Empreendedorismo e Inovação.docx
docs/docs/AULA 1/20241204 - Trabalho/: Entrega - Final.docx
docs/docs/AULA 3/: FIAP_Projeção Financeira Projetos de Intraempreendedorismo _Modelo.xlsx  FIAP_Projeção Financeira Startup One e Projetos Inovação Aberta_Modelo (1).xlsx  Fiap_Modelo Business Deck_ Empreendedorismo e Inovação.docx  trabalho-empreendedorismo-inovacao-3a-parte.md
docs/docs/TRABALHOS ENTREGUES/: # Modelo de Negócio e Projeção Financeir.md  Elasticidade das margens.md  Panfleto de venda.md
mba_empreendedorismo_faty7098/: __init__.py  dataset.py  features.py  plots.py
mba_empreendedorismo_faty7098/modeling/: predict.py  train.py
notebooks/: Modelo de negocio.ipynb
prompts/Modelo Financeiro/: Chat (1).docx
