[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mba_empreendedorismo_faty7098"
version = "0.0.1"
description = "MBA FIAP - EQUIVALE AO TCC"
authors = [
  { name = "WRM" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.3"


[tool.ruff]
line-length = 99
src = ["mba_empreendedorismo_faty7098"]
include = ["pyproject.toml", "mba_empreendedorismo_faty7098/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mba_empreendedorismo_faty7098"]
force-sort-within-sections = true

